[metadata]
name = hello-konsou
version = 0.0.2
author = Tomi Javanainen
author_email = tomi.javanainen@gmail.com
description = A small example package
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/konsou/packaging_tutorial
project_urls =
    Bug Tracker = https://github.com/konsou/packaging_tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src